--- a/CAN_f103c8t6_test/CAN_f103c8t6_test.ioc
+++ b/CAN_f103c8t6_test/CAN_f103c8t6_test.ioc
@@ -18,13 +18,14 @@ Mcu.IP3=SYS
 Mcu.IPNb=4
 Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
-Mcu.Pin0=PB12
-Mcu.Pin1=PA11
-Mcu.Pin2=PA12
-Mcu.Pin3=PA13
-Mcu.Pin4=PA14
-Mcu.Pin5=VP_SYS_VS_Systick
-Mcu.PinsNb=6
+Mcu.Pin0=PC13-TAMPER-RTC
+Mcu.Pin1=PB12
+Mcu.Pin2=PA11
+Mcu.Pin3=PA12
+Mcu.Pin4=PA13
+Mcu.Pin5=PA14
+Mcu.Pin6=VP_SYS_VS_Systick
+Mcu.PinsNb=7
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
@@ -49,8 +50,14 @@ PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
+PB12.GPIOParameters=GPIO_PuPd
+PB12.GPIO_PuPd=GPIO_PULLDOWN
 PB12.Locked=true
 PB12.Signal=GPIO_Output
+PC13-TAMPER-RTC.GPIOParameters=GPIO_PuPd
+PC13-TAMPER-RTC.GPIO_PuPd=GPIO_PULLDOWN
+PC13-TAMPER-RTC.Locked=true
+PC13-TAMPER-RTC.Signal=GPIO_Output
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
